--- a/frontend/src/app/components/admin-app-container/admin-app-container.component.html
+++ b/frontend/src/app/components/admin-app-container/admin-app-container.component.html
@@ -41,8 +41,8 @@
 <!--              <img class="w-10 h-10 bg-gray-300 rounded-full flex-shrink-0"-->
 <!--                   src="https://images.unsplash.com/photo-1502685104226-ee32379fefbe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=3&w=256&h=256&q=80" alt=""/>-->
           <span class="flex-1 flex flex-col min-w-0">
-            <span class="text-white text-sm font-medium truncate">{{authService.user.firstName}} {{authService.user.lastName}}</span>
-            <span class="text-gray-500 text-sm truncate">{{authService.user.email}}</span>
+            <span class="text-white text-sm font-medium truncate">FirstName LastName</span>
+            <span class="text-gray-500 text-sm truncate">Email</span>
           </span>
         </span>
             <!-- Heroicon name: solid/selector -->
