--- a/frontend/src/app/ui/admin/admin-profile/admin-profile.component.html
+++ b/frontend/src/app/ui/admin/admin-profile/admin-profile.component.html
@@ -15,22 +15,22 @@
 
             <div class="sm:col-span-3">
               <label for="first-name" class="block text-sm font-medium text-blue-gray-900"> First name </label>
-              <input type="text" value="{{authService.user.firstName}}" name="first-name" id="first-name" autocomplete="given-name" class="field mt-1 block w-full ">
+              <input type="text" value="FirstName" name="first-name" id="first-name" autocomplete="given-name" class="field mt-1 block w-full ">
             </div>
 
             <div class="sm:col-span-3">
               <label for="last-name" class="block text-sm font-medium text-blue-gray-900"> Last name </label>
-              <input type="text"  value="{{authService.user.lastName}}" name="last-name" id="last-name" autocomplete="family-name" class="field mt-1 block w-full">
+              <input type="text"  value="LastName" name="last-name" id="last-name" autocomplete="family-name" class="field mt-1 block w-full">
             </div>
 
             <div class="sm:col-span-6">
               <label for="last-name" class="block text-sm font-medium text-blue-gray-900"> Admin name </label>
-              <input type="text" value="{{authService.user.firstName}} {{authService.user.lastName}}" name="user-name" id="user-name" autocomplete="family-name" class="field mt-1 block w-full">
+              <input type="text" value="FirstName lastName" name="user-name" id="user-name" autocomplete="family-name" class="field mt-1 block w-full">
             </div>
 
             <div class="sm:col-span-6">
               <label for="email" class="block text-sm font-medium text-blue-gray-900"> Admin Email </label>
-              <input type="text" value="{{authService.user.email}} " name="email" id="email" autocomplete="email" class="field mt-1 block w-full">
+              <input type="text" value="Email " name="email" id="email" autocomplete="email" class="field mt-1 block w-full">
             </div>
 
 <!--            <div class="sm:col-span-6">-->
@@ -62,7 +62,7 @@
           </div>
 
           <div class="pt-4">
-            <button (click)="authService.logout()"
+            <button
                     type="button" class="secondary-outlined-button-black w-full">Logout</button>
           </div>
           <div>
